// Vitest Snapshot v1

exports[`Tabs > :props > :addable 1`] = `
<div
  class="t-tabs"
>
  
  <div
    class="t-tabs__header t-is-top"
  >
    <div
      class="t-tabs__nav"
      style="min-height: 48px;"
    >
      
      <div
        class="t-tabs__operations t-tabs__operations--left"
      >
        <transition-stub>
          <!---->
        </transition-stub>
      </div>
      <div
        class="t-tabs__operations t-tabs__operations--right"
      >
        <transition-stub
          appear="true"
          mode="out-in"
          name="fade"
        />
        <div
          class="t-tabs__add-btn t-tabs__btn t-size-m"
        >
          <svg
            class="t-icon t-icon-add"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M7.35 8.65v3.85h1.3V8.65h3.85v-1.3H8.65V3.5h-1.3v3.85H3.5v1.3h3.85z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
      </div>
      
      <div
        class="t-tabs__nav-container t-is-top"
      >
        <div
          class="t-tabs__nav-scroll"
        >
          <div
            class="t-tabs__nav-wrap t-is-smooth"
            style="transform: translate3d(0px, 0, 0);"
          >
            <div
              class="t-tabs__bar t-is-top"
            />
            
            
          </div>
        </div>
      </div>
    </div>
  </div>
  <!---->
  
</div>
`;

exports[`Tabs > :props > :defaultValue 1`] = `
<div
  class="t-tabs"
>
  
  <div
    class="t-tabs__header t-is-top"
  >
    <div
      class="t-tabs__nav"
    >
      
      <div
        class="t-tabs__operations t-tabs__operations--left"
      >
        <transition-stub>
          <!---->
        </transition-stub>
      </div>
      <div
        class="t-tabs__operations t-tabs__operations--right"
      >
        <transition-stub
          appear="true"
          mode="out-in"
          name="fade"
        />
        <!---->
      </div>
      
      <div
        class="t-tabs__nav-container t-is-top"
      >
        <div
          class="t-tabs__nav-scroll"
        >
          <div
            class="t-tabs__nav-wrap t-is-smooth"
            style="transform: translate3d(0px, 0, 0);"
          >
            <div
              class="t-tabs__bar t-is-top"
            />
            
            
          </div>
        </div>
      </div>
    </div>
  </div>
  <!---->
  
</div>
`;

exports[`Tabs > :props > :disabled 1`] = `
<div
  class="t-tabs"
>
  
  <div
    class="t-tabs__header t-is-top"
  >
    <div
      class="t-tabs__nav"
    >
      
      <div
        class="t-tabs__operations t-tabs__operations--left"
      >
        <transition-stub>
          <!---->
        </transition-stub>
      </div>
      <div
        class="t-tabs__operations t-tabs__operations--right"
      >
        <transition-stub
          appear="true"
          mode="out-in"
          name="fade"
        />
        <!---->
      </div>
      
      <div
        class="t-tabs__nav-container t-is-top"
      >
        <div
          class="t-tabs__nav-scroll"
        >
          <div
            class="t-tabs__nav-wrap t-is-smooth"
            style="transform: translate3d(0px, 0, 0);"
          >
            <div
              class="t-tabs__bar t-is-top"
            />
            
            
          </div>
        </div>
      </div>
    </div>
  </div>
  <!---->
  
</div>
`;

exports[`Tabs > :props > :placement 1`] = `
<div
  class="t-tabs"
>
  
  <div
    class="t-tabs__header t-is-left"
  >
    <div
      class="t-tabs__nav"
    >
      
      <div
        class="t-tabs__operations t-tabs__operations--left"
      >
        <transition-stub>
          <!---->
        </transition-stub>
      </div>
      <div
        class="t-tabs__operations t-tabs__operations--right"
      >
        <transition-stub
          appear="true"
          mode="out-in"
          name="fade"
        />
        <!---->
      </div>
      
      <div
        class="t-tabs__nav-container t-is-left"
      >
        <div
          class="t-tabs__nav-scroll"
        >
          <div
            class="t-tabs__nav-wrap t-is-smooth t-is-vertical"
          >
            <div
              class="t-tabs__bar t-is-left"
            />
            
            
          </div>
        </div>
      </div>
    </div>
  </div>
  <!---->
  
</div>
`;

exports[`Tabs > :props > :size 1`] = `
<div
  class="t-tabs"
>
  
  <div
    class="t-tabs__header t-is-top"
  >
    <div
      class="t-tabs__nav"
    >
      
      <div
        class="t-tabs__operations t-tabs__operations--left"
      >
        <transition-stub>
          <!---->
        </transition-stub>
      </div>
      <div
        class="t-tabs__operations t-tabs__operations--right"
      >
        <transition-stub
          appear="true"
          mode="out-in"
          name="fade"
        />
        <!---->
      </div>
      
      <div
        class="t-tabs__nav-container t-is-top"
      >
        <div
          class="t-tabs__nav-scroll"
        >
          <div
            class="t-tabs__nav-wrap t-is-smooth"
            style="transform: translate3d(0px, 0, 0);"
          >
            <div
              class="t-tabs__bar t-is-top"
            />
            
            
          </div>
        </div>
      </div>
    </div>
  </div>
  <!---->
  
</div>
`;

exports[`Tabs > :props > :theme 1`] = `
<div
  class="t-tabs"
>
  
  <div
    class="t-tabs__header t-is-top"
  >
    <div
      class="t-tabs__nav"
    >
      
      <div
        class="t-tabs__operations t-tabs__operations--left"
      >
        <transition-stub>
          <!---->
        </transition-stub>
      </div>
      <div
        class="t-tabs__operations t-tabs__operations--right"
      >
        <transition-stub
          appear="true"
          mode="out-in"
          name="fade"
        />
        <!---->
      </div>
      
      <div
        class="t-tabs__nav-container t-tabs__nav--card t-is-top"
      >
        <div
          class="t-tabs__nav-scroll"
        >
          <div
            class="t-tabs__nav-wrap t-is-smooth"
            style="transform: translate3d(0px, 0, 0);"
          >
            <!---->
            
            
          </div>
        </div>
      </div>
    </div>
  </div>
  <!---->
  
</div>
`;

exports[`Tabs > :props > :value 1`] = `
<div
  class="t-tabs"
>
  
  <div
    class="t-tabs__header t-is-top"
  >
    <div
      class="t-tabs__nav"
    >
      
      <div
        class="t-tabs__operations t-tabs__operations--left"
      >
        <transition-stub>
          <!---->
        </transition-stub>
      </div>
      <div
        class="t-tabs__operations t-tabs__operations--right"
      >
        <transition-stub
          appear="true"
          mode="out-in"
          name="fade"
        />
        <!---->
      </div>
      
      <div
        class="t-tabs__nav-container t-is-top"
      >
        <div
          class="t-tabs__nav-scroll"
        >
          <div
            class="t-tabs__nav-wrap t-is-smooth"
            style="transform: translate3d(0px, 0, 0);"
          >
            <div
              class="t-tabs__bar t-is-top"
            />
            
            
          </div>
        </div>
      </div>
    </div>
  </div>
  <!---->
  
</div>
`;
